# MatiOS

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
docker/: Dockerfile
scripts/: init.sql
src/: __init__.py  config.py  main.py
tests/: __init__.py
